[gd_scene load_steps=10 format=3 uid="uid://dtchwqlmtjm83"]

[ext_resource type="PackedScene" uid="uid://b61bi13bbrssv" path="res://paddle_1/paddle_1.tscn" id="1_80nbo"]
[ext_resource type="Texture2D" uid="uid://bct0ok4rfwd7" path="res://bg.png" id="1_fc0e3"]
[ext_resource type="Script" uid="uid://ccahf2ws0yu2c" path="res://game.gd" id="1_ryrav"]
[ext_resource type="PackedScene" uid="uid://byvy8w58ljr37" path="res://paddle_2/paddle_2.tscn" id="2_e2o6t"]
[ext_resource type="Texture2D" uid="uid://kqw7e64rpeeq" path="res://2D Gore UI/Gauge_Gore_Thin_Empty.png" id="3_feb5d"]
[ext_resource type="AudioStream" uid="uid://bh27c31bkvwqn" path="res://2D Gore UI/song.mp3" id="7_eow3j"]
[ext_resource type="AudioStream" uid="uid://b1718qikjh3c6" path="res://2D Gore UI/score.mp3" id="7_j5wjh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fc0e3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jktm"]
size = Vector2(20, 62.680023)

[node name="game" type="Node2D"]
script = ExtResource("1_ryrav")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(2.8, 2.8)
texture = ExtResource("1_fc0e3")

[node name="paddle1" parent="." instance=ExtResource("1_80nbo")]
position = Vector2(1870, 540)

[node name="paddle2" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(70, 540)

[node name="wall" type="StaticBody2D" parent="."]
position = Vector2(0, 16)

[node name="wall_shape" type="Sprite2D" parent="wall"]
texture = ExtResource("3_feb5d")

[node name="wall_shape2" type="Sprite2D" parent="wall"]
position = Vector2(320, 0)
texture = ExtResource("3_feb5d")

[node name="wall_shape3" type="Sprite2D" parent="wall"]
position = Vector2(640, 0)
texture = ExtResource("3_feb5d")

[node name="wall_shape4" type="Sprite2D" parent="wall"]
position = Vector2(1280, 0)
texture = ExtResource("3_feb5d")

[node name="wall_shape6" type="Sprite2D" parent="wall"]
position = Vector2(1600, 0)
texture = ExtResource("3_feb5d")

[node name="wall_shape7" type="Sprite2D" parent="wall"]
position = Vector2(1920, 0)
texture = ExtResource("3_feb5d")

[node name="wall_shape5" type="Sprite2D" parent="wall"]
position = Vector2(960, 0)
texture = ExtResource("3_feb5d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall"]
position = Vector2(960, 0)
scale = Vector2(113.34, 2.065)
shape = SubResource("RectangleShape2D_fc0e3")

[node name="wall2" type="StaticBody2D" parent="."]
position = Vector2(0, 1064)

[node name="wall_shape" type="Sprite2D" parent="wall2"]
texture = ExtResource("3_feb5d")
flip_v = true

[node name="wall_shape2" type="Sprite2D" parent="wall2"]
position = Vector2(320, 0)
texture = ExtResource("3_feb5d")
flip_v = true

[node name="wall_shape3" type="Sprite2D" parent="wall2"]
position = Vector2(640, 0)
texture = ExtResource("3_feb5d")
flip_v = true

[node name="wall_shape4" type="Sprite2D" parent="wall2"]
position = Vector2(1280, 0)
texture = ExtResource("3_feb5d")
flip_v = true

[node name="wall_shape6" type="Sprite2D" parent="wall2"]
position = Vector2(1600, 0)
texture = ExtResource("3_feb5d")
flip_v = true

[node name="wall_shape7" type="Sprite2D" parent="wall2"]
position = Vector2(1920, 0)
texture = ExtResource("3_feb5d")
flip_v = true

[node name="wall_shape5" type="Sprite2D" parent="wall2"]
position = Vector2(960, 0)
texture = ExtResource("3_feb5d")
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall2"]
position = Vector2(960, 0)
scale = Vector2(113.34, 2.065)
shape = SubResource("RectangleShape2D_fc0e3")

[node name="left" type="Area2D" parent="."]
position = Vector2(-287, 553)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="left"]
position = Vector2(23, -16)
scale = Vector2(15.97, 15.97)
shape = SubResource("RectangleShape2D_7jktm")

[node name="right" type="Area2D" parent="."]
position = Vector2(2158, 552)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="right"]
position = Vector2(23, -16)
scale = Vector2(15.97, 15.97)
shape = SubResource("RectangleShape2D_7jktm")

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_eow3j")
volume_db = -10.0
autoplay = true

[node name="score" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 732.0
offset_top = 89.0
offset_right = 1228.0
offset_bottom = 431.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 250
text = "0 - 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="score_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_j5wjh")
volume_db = -3.0

[connection signal="body_entered" from="left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="right" to="." method="_on_right_body_entered"]
